--- a/Async Race/package.json
+++ b/Async Race/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "html-loader": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
