--- a/Async Race/package.json
+++ b/Async Race/package.json
@@ -1,7 +1,7 @@
 {
   "name": "async-race",
   "version": "1.0.0",
-  "description": "",
+  "description": "Learning project",
   "main": "index.js",
   "private": true,
   "homepage": "https://rolling-scopes-school.github.io/sak74-JSFEEN2022Q3/Async-Race/",
@@ -9,7 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "lint": "eslint --fix src",
-    "deploy": "gh-pages -d build "
+    "deploy": "gh-pages -d build ",
+    "serve": "webpack serve"
   },
   "author": "SAK74",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "html-loader": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
