Squashed commit of the following:
commit be7b6b1012a15769e8c5c80df0dae6cd472a9604
Author: SAK74 <sergijks@gmail.com>
Date:   Sun Jan 29 20:18:51 2023 +0100

    fix: change webpack settings

commit a11efea643dc05785adb24fc34a9eeb1044005f0
Author: SAK74 <sergijks@gmail.com>
Date:   Tue Jan 24 20:11:42 2023 +0100

    fix: some minor fixes

--- a/Async Race/package.json
+++ b/Async Race/package.json
@@ -7,9 +7,10 @@
   "homepage": "https://sak74.github.io/Async-Race/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack build --mode=production",
     "lint": "eslint --fix src",
-    "deploy": "npm run lint && webpack && gh-pages -o private -d build ",
+    "predeploy": "npm run lint && npm run build",
+    "deploy": "gh-pages -d build -o private",
     "start": "webpack serve"
   },
   "author": "SAK74",
@@ -25,5 +26,8 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.0"
   }
 }
